<?xml version="1.0" encoding="utf-8"?>
<android.widget.ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBack">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/pokeCard"
            android:layout_width="match_parent"
            android:layout_height="550dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/card" />
        <TextView
            android:id="@+id/pokeName"
            android:background="@color/colorPrimary"
            android:textColor="#ffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="20sp"
            android:text="@string/poke_name"/>
        <TextView
            android:id="@id/pokeType"
            android:background="@color/colorAccent"
            android:textColor="#ffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:textAlignment="center"
            android:paddingRight="16dp"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:text="@string/type_card"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deskripsi"
            android:textSize="16sp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="8dp"/>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:text="@string/damage"/>
                <TextView
                    android:id="@+id/pokeDamage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:text="@string/poke_damage"
                    android:textColor="@android:color/black"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:text="@string/poke_hp"/>
                <TextView
                    android:id="@+id/pokeHP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:text="@string/poke_hp"
                    android:textColor="@android:color/black"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:text="@string/poke_howtoplay"/>
                <TextView
                    android:id="@+id/pokeHowToPlay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:text="@string/poke_howtoplay"
                    android:textColor="@android:color/black"/>
            </TableRow>
        </TableLayout>

    </LinearLayout>
</android.widget.ScrollView>